index file restructure

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
 	<div class='container'>
 	
 		<header>
-	
+			<div id='wbez-header'>
+			</div>
+			<div id='cc-header'>
+			</div>
 		</header>
-		<div role="main">
-	
+		<div id='flash'>
+		</div>
+		<div id='questions'>
+		</div>
+		<div id='discussion'>
 		</div>
 		<footer>
-	
 		</footer>
 	
 	</div><!-- .container -->
