design roughed in further

--- a/index.html
+++ b/index.html
@@ -23,17 +23,88 @@
 	
 		<header>
 			<div id='wbez-header'>
+				<div class="logo pull-left">WBEZ91.5</div>
+				<div class="social pull-right"><a href="mailto:curiouscity@wbez.org">mailto:curiouscity@wbez.org</a> FTRG+</div>
 			</div>
-			<div id='cc-header'>
+			<div id='cc-nav'>
+				<img src='images/cc-header-logo.png' height='150pxf' width='300px'/>
+				<ul>
+					<li><a href='#'>vote now</a></li>
+					<li><a href='#'>ask a question</a></li>
+					<li><a href='#'>stories</a></li>
+					<li><a href='#'>question archive</a></li>
+					<li><a href='#'>about</a></li>
+				</ul>
 			</div>
 		</header>
 		<div id='flash'>
+			<div class='row'>
+				<div class="span5">
+					<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
+				</div>
+				<div class="span7">
+					<div class="super">
+						<h1>Which should we investigate next?</h1>
+					</div>
+					<div class="sub">
+						<h5>Vote for the question you’d like to know most</h5>
+					</div>
+				</div>
+			</div>
 		</div>
+		
 		<div id='questions'>
+			
+			<div class='question'>
+				<div class="row">
+					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<div class="span7 question-text">
+						<h2>Why are there so few trees in some, very large stretches of the city?</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class='question'>
+				<div class="row">
+					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<div class="span7 question-text">
+						<h2>Why do all of the manhole covers, gratings, etc. in Chicago come from Neenah, Wisconsin?</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class='question'>
+				<div class="row">
+					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<div class="span7 question-text">
+						<h2>What was done with all of the material left over from the Chicago fire?</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class='question'>
+				<div class="row">
+					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<div class="span7 question-text">
+						<h2>Just what exactly are the rules for cycling in the city? Everyone seems to have their own set of rules they go by.</h2>
+					</div>
+				</div>
+			</div>
+			
 		</div>
+		
+		<div id='voting-date' class='clearfix'>
+			<a href='#'>Voting for May 04 - May 11 / 2012</a>
+		</div>
+		
 		<div id='discussion'>
+			discus stuff goes here
 		</div>
 		<footer>
+			<div class="footer-head">Sponsors</div>
+			<div class="sponsor-branding">
+				sponsor logos here
+			</div>
 		</footer>
 	
 	</div><!-- .container -->
