roughing mostly complete

--- a/index.html
+++ b/index.html
@@ -19,30 +19,73 @@
 <body>
 	<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 	
-	<div class='container'>
+	
+	
+	<div id='wbez-header'>
+		<div class='container'>
+			<div class="logo pull-left"><a href='wbez.org' target='blank'><img src='wbez' alt='WBEZ91.5' height='20px' width='60px'/></a></div>
+			<div class="social pull-right"><a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a> FTRG+</div>
+		</div>
+	</div>
+	
+	<div class='container main'>
 	
 		<header>
-			<div id='wbez-header'>
-				<div class="logo pull-left">WBEZ91.5</div>
-				<div class="social pull-right"><a href="mailto:curiouscity@wbez.org">mailto:curiouscity@wbez.org</a> FTRG+</div>
-			</div>
+			
 			<div id='cc-nav'>
-				<img src='images/cc-header-logo.png' height='150pxf' width='300px'/>
+				<div class="row">
+					<div class="span5">
+						<img src='images/cc-header-logo.png' alt='curiouscity' height='75px' width='380px'/>
+					</div>
+					<div class="span7">
+						<ul>
+							<li><a href='#'>vote now</a></li>
+							<li><a href='#'>ask a<br />question</a></li>
+							<li><a href='#'>stories</a></li>
+							<li><a href='#'>question<br />archive</a></li>
+							<li><a href='#'>about</a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+			<div id='how-it-works' class='clearfix hide'>
 				<ul>
-					<li><a href='#'>vote now</a></li>
-					<li><a href='#'>ask a question</a></li>
-					<li><a href='#'>stories</a></li>
-					<li><a href='#'>question archive</a></li>
-					<li><a href='#'>about</a></li>
+					<li>
+						Story ideas come You vote on the from the community
+					</li>
+					<li>
+						You vote on the ideas you wanna know most
+					</li>
+					<li>
+						We begin to investigate and post updates
+					</li>
+					<li>
+						The story publicly unfolds in real time
+					</li>
+					<li>
+						Followers help with more discussion and ideas
+					</li>
+					<li>
+						Followers help with more discussion and ideas
+					</li>
+					<li>
+						We Solve the story together!
+					</li>
 				</ul>
 			</div>
+			<div id="how-it-works-expander" class='clearfix'><a href='#' class='pull-right'>how it works <i class='arrow down'></i></a></div>
+
+		
 		</header>
+		
+		
 		<div id='flash'>
 			<div class='row'>
 				<div class="span5">
 					<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
 				</div>
-				<div class="span7">
+				<div class="span7 right-col">
 					<div class="super">
 						<h1>Which should we investigate next?</h1>
 					</div>
@@ -51,6 +94,7 @@
 					</div>
 				</div>
 			</div>
+			
 		</div>
 		
 		<div id='questions'>
@@ -58,6 +102,7 @@
 			<div class='question'>
 				<div class="row">
 					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<a href='#'><i class='vote'></i></a>
 					<div class="span7 question-text">
 						<h2>Why are there so few trees in some, very large stretches of the city?</h2>
 					</div>
@@ -67,6 +112,7 @@
 			<div class='question'>
 				<div class="row">
 					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<a href='#'><i class='vote'></i></a>
 					<div class="span7 question-text">
 						<h2>Why do all of the manhole covers, gratings, etc. in Chicago come from Neenah, Wisconsin?</h2>
 					</div>
@@ -76,6 +122,7 @@
 			<div class='question'>
 				<div class="row">
 					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<a href='#'><i class='vote'></i></a>
 					<div class="span7 question-text">
 						<h2>What was done with all of the material left over from the Chicago fire?</h2>
 					</div>
@@ -85,6 +132,7 @@
 			<div class='question'>
 				<div class="row">
 					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
+					<a href='#'><i class='vote'></i></a>
 					<div class="span7 question-text">
 						<h2>Just what exactly are the rules for cycling in the city? Everyone seems to have their own set of rules they go by.</h2>
 					</div>
@@ -94,15 +142,15 @@
 		</div>
 		
 		<div id='voting-date' class='clearfix'>
-			<a href='#'>Voting for May 04 - May 11 / 2012</a>
+			<a href='#'><i class='arrow left'></i> Voting for May 04 - May 11 / 2012</a>
 		</div>
 		
 		<div id='discussion'>
 			discus stuff goes here
 		</div>
 		<footer>
-			<div class="footer-head">Sponsors</div>
-			<div class="sponsor-branding">
+			<div id="footer-head">Sponsors</div>
+			<div id="sponsor-branding">
 				sponsor logos here
 			</div>
 		</footer>
