social icons added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 	<div id='wbez-header'>
 		<div class='container'>
 			<div class="logo pull-left"><a href='wbez.org' target='blank'><img src='wbez' alt='WBEZ91.5' height='20px' width='60px'/></a></div>
-			<div class="social pull-right"><a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a> FTRG+</div>
+			<div class="social pull-right">
+				<a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a>
+				<a href='#'><i class='social-facebook social'></i></a>
+				<a href='#'><i class='social-twitter social'></i></a>
+				<a href='#'><i class='social-rss social'></i></a>
+				<a href='#'><i class='social-googleplus social'></i></a>
+			</div>
 		</div>
 	</div>
 	
