--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="span7">
 						<ul>
 							<li><a href='#'>vote now</a></li>
-							<li><a href='#'>ask a<br />question</a></li>
+							<li><a href='#submit'>ask a<br />question</a></li>
 							<li><a href='#'>stories</a></li>
 							<li><a href='#'>question<br />archive</a></li>
 							<li><a href='#'>about</a></li>
