--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div id='cc-nav'>
 				<div class="row">
 					<div class="span5">
-						<img src='images/cc-header-logo.png' alt='curiouscity' height='75px' width='380px'/>
+						<img src='images/cc-header-logo.gif' alt='curiouscity' height='75px' width='380px'/>
 					</div>
 					<div class="span7">
 						<ul>
