--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<li><a href='#submit'>ask a<br />question</a></li>
 							<li><a href='#'>stories</a></li>
 							<li><a href='#'>question<br />archive</a></li>
-							<li><a href='#'>about</a></li>
+							<li><a href='#' id='nav-about'>about</a></li>
 						</ul>
 					</div>
 				</div>
@@ -103,50 +103,8 @@
 			
 		</div>
 		
-		<div id='questions'>
-			
-			<!--
-			<div class='question'>
-				<div class="row">
-					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="span7 question-text">
-						<h2>Why are there so few trees in some, very large stretches of the city?</h2>
-					</div>
-				</div>
-			</div>
-			
-			<div class='question'>
-				<div class="row">
-					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="span7 question-text">
-						<h2>Why do all of the manhole covers, gratings, etc. in Chicago come from Neenah, Wisconsin?</h2>
-					</div>
-				</div>
-			</div>
-			
-			<div class='question'>
-				<div class="row">
-					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="span7 question-text">
-						<h2>What was done with all of the material left over from the Chicago fire?</h2>
-					</div>
-				</div>
-			</div>
-			
-			<div class='question'>
-				<div class="row">
-					<div class="span5 question-image" style='background-image:url(images/image.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="span7 question-text">
-						<h2>Just what exactly are the rules for cycling in the city? Everyone seems to have their own set of rules they go by.</h2>
-					</div>
-				</div>
-			</div>
-			-->
-		</div>
+		<div id='questions'></div>
+		<div id='questions-order' class='hide'></div>
 		
 		<div id='voting-date' class='clearfix'>
 			<a href='#'><i class='arrow left'></i> Voting for May 04 - May 11 / 2012</a>
