--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div id='wbez-header'>
 		<div class='container'>
-			<div class="logo pull-left"><a href='wbez.org' target='blank'><img src='wbez' alt='WBEZ91.5' height='20px' width='60px'/></a></div>
+			<div class="logo pull-left"><a href='wbez.org' target='blank'><img src='images/wbez.png' alt='WBEZ91.5' height='20px'/></a></div>
 			<div class="social pull-right">
 				<a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a>
 				<a href='#'><i class='social-facebook social'></i></a>
@@ -41,7 +41,7 @@
 			<div id='cc-nav'>
 				<div class="row">
 					<div class="span5">
-						<img src='images/cc-header-logo.gif' alt='curiouscity' height='75px' width='380px'/>
+						<img src='images/cc-logo.png' alt='curiouscity' height='75px' width='380px'/>
 					</div>
 					<div class="span7">
 						<ul>
@@ -80,7 +80,7 @@
 					</li>
 				</ul>
 			</div>
-			<div id="how-it-works-expander" class='clearfix'><a href='#' class='pull-right'>how it works <i class='arrow down'></i></a></div>
+			<div id="how-it-works-expander" class='clearfix'><a href='#' class='pull-left'>how it works <i class='arrow down'></i></a></div>
 
 		
 		</header>
