--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div id='cc-nav'>
 				<div class="row">
 					<div class="span5">
-						<img src='images/cc-logo.png' alt='curiouscity' height='75px' width='380px'/>
+						<img src='images/cc-logo.gif' alt='curiouscity' height='75px' width='380px'/>
 					</div>
 					<div class="span7">
 						<ul>
@@ -85,27 +85,25 @@
 		
 		</header>
 		
-		
-		<div id='flash'>
-			<div class='row'>
-				<div class="span5">
-					<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
-				</div>
-				<div class="span7 right-col">
-					<div class="super">
-						<h1>Which should we investigate next?</h1>
-					</div>
-					<div class="sub">
-						<h5>Vote for the question you’d like to know most</h5>
-					</div>
-				</div>
-			</div>
-			
-		</div>
-		
 		<div id='pages'>
 			
 			<div id="vote-page" class='hide focus'>
+				<div id='flash'>
+					<div class='row'>
+						<div class="span5">
+							<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
+						</div>
+						<div class="span7 right-col">
+							<div class="super">
+								<h1>Which should we investigate next?</h1>
+							</div>
+							<div class="sub">
+								<h5>Vote for the question you’d like to know most</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 				<div id='questions'></div>
 				<div id='questions-order' class='hide'></div>
 			</div>
