style tweaks, add ask functionality

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div id='flash'>
 					<div class='row'>
 						<div class="span5">
-							<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
+							<h5> placeholder </h5>
 						</div>
 						<div class="span7 right-col">
 							<div class="super">
@@ -109,7 +109,22 @@
 			</div>
 			
 			<div id="ask-page" class='hide'>
-				ask page
+				<div id='ask-flash'>
+					<div class='row'>
+						<div class="span5">
+							<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
+						</div>
+						<div class="span7 right-col">
+							<div class="super">
+								<h1>What do you wonder about Chicago,the region, or the people who live here?</h1>
+							</div>
+							<div class="sub">
+								<h5>Please write your question</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="ask-form"></div>
 			</div>
 			
 			<div id="stories-page" class='hide'>
