vote ui added and instructions updated

--- a/index.html
+++ b/index.html
@@ -57,26 +57,25 @@
 			</div>
 			<div id='how-it-works' class='clearfix hide'>
 				<ul>
-					<li>
-						Story ideas come You vote on the from the community
+					<li class='step-1'>
+						<i class='number-1'></i>
+						Questions come from the community
 					</li>
-					<li>
-						You vote on the ideas you wanna know most
+					<li class='step-2'>
+						<i class='number-2'></i>
+						You vote for your favorites 
 					</li>
-					<li>
-						We begin to investigate and post updates
+					<li class='step-3'>
+						<i class='number-3'></i>
+						WBEZ investigates, posting updates in real time 
 					</li>
-					<li>
-						The story publicly unfolds in real time
+					<li class='step-4'>
+						<i class='number-4'></i>
+						Followers help shape the investigation
 					</li>
-					<li>
-						Followers help with more discussion and ideas
-					</li>
-					<li>
-						Followers help with more discussion and ideas
-					</li>
-					<li>
-						We Solve the story together!
+					<li class='step-5'>
+						<i class='number-5'></i>
+						We discover the answers together!
 					</li>
 				</ul>
 			</div>
