archive and about page updated

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 			</div>
 			
 			<div id="archive-page" class='hide'>
-				archive page
+				<div id='archive-questions'></div>
 			</div>
 			
 			<div id="about-page" class='hide'>
 				<div class="row">
-					<div class="span4">
+					<div class="span4 left-col">
 						<img src="images/about.png" alt="how? why?" width="100%" height="" border="" align="" />
 						<div class="about-sidebar">
 							<p class="">
@@ -147,7 +147,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="span8">
+					<div class="span8 right-col">
 						
 						<div class='section-head'>
 							<h3>
