--- a/index.html
+++ b/index.html
@@ -245,7 +245,19 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 		<footer>
 			<div id="footer-head">Sponsors</div>
 			<div id="sponsor-branding">
-				sponsor logos here
+				<ul class='unstyled'>
+
+					<li><img src="images/logos/cpb_on.png"/></li>
+					<li><img src="images/logos/AIR_vertical_logo.png"/></li>
+					<li><img src="images/logos/Art-Works-Logo.png"/></li>
+					<li><img src="images/logos/Localore_BW_Lo_sm.png"/></li>
+					<li><img src="images/logos/macarthur_on.gif"/></li>
+					<li><img src="images/logos/wyncote_on.png"/></li>
+
+				</ul>
+
+
+				
 			</div>
 		</footer>
 	
