--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>curiouscity</title>
+	<title>urious City</title>
 	<meta name="description" content="">
 	
 	<meta name="viewport" content="width=device-width">
 	<!-- Application styles -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/curiouscity.css">
-	
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<script src="js/lib/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
@@ -240,7 +240,18 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 		</div>
 		
 		<div id='discussion'>
-			discus stuff goes here
+			<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'curiouscity'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 		</div>
 		<footer>
 			<div id="footer-head">Sponsors</div>
