--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 		</div>
 		
 		<div id='discussion'>
+		<button class="btn add-comment">Add a comment</button>
 			<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
