--- a/index.html
+++ b/index.html
@@ -238,9 +238,17 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 		<div id='voting-date' class='clearfix'>
 			<a href='#'><i class='arrow left'></i> Voting for May 04 - May 11 / 2012</a>
 		</div>
-		
 		<div id='discussion'>
-		<button class="btn add-comment">Add a comment</button>
+		<div >
+				<div class="row">
+					<div class="span5">
+						<h2>Investigation Updates</h2>
+					</div>
+					<div class="span7">
+						<h2>What are people saying this round</h2>
+							<div id='disqus-controls'><button class="btn add-comment">Add a comment</button></div>
+		
+		
 			<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -253,6 +261,17 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
+					
+					</div>
+				</div>
+				
+		</div>
+		
+		
+	
+		
+		
+		
 		</div>
 		<footer>
 			<div id="footer-head">Sponsors</div>
