--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 					</div>
 					<div class="span7">
 						<h2>What are people saying this round</h2>
-							<div id='disqus-controls'> <div class="disqus-sort-tab" id="disqus-sort-popular"><a onclick="DISQUS.dtpl.actions.fire('thread.sort', 'best');">Popular</a></div>
-  <div class="disqus-sort-tab" id="disqus-sort-recent"><a onclick="DISQUS.dtpl.actions.fire('thread.sort', 'newest');">Most Recent</a></div>
-  <button id="disqus-add-comment" class="btn">Add a comment</button></div>
+							<div id='disqus-controls'>
+								<div class="disqus-sort-tab" id="disqus-sort-popular"><a>Popular</a></div>
+  								<div class="disqus-sort-tab" id="disqus-sort-recent"><a >Most Recent</a></div>
+  								<button id="disqus-add-comment" class="btn">Add a comment</button>
+  							</div>
 		
 		
 			<div id="disqus_thread"></div>
