--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 						<h2>What are people saying this round</h2>
 							<div id='disqus-controls'>
 								<div class="disqus-sort-tab disqus-sort-unselected" id="disqus-sort-popular"><a>Popular</a></div>
-  								<div class="disqus-sort-tab" id="disqus-sort-newest"><a >Most Recent</a></div>
+  								<div class="disqus-sort-tab disqus-sort-selected" id="disqus-sort-newest"><a >Most Recent</a></div>
   								<button id="disqus-add-comment" class="btn">Add a comment</button>
   							</div>
 		
