widget is working as expected. votes are NOT posted

--- a/widget.html
+++ b/widget.html
@@ -32,7 +32,6 @@
 <body>
 	<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 	
-	
 	<div class='wrapper'>
 		<header>
 			<img src="images/cc-logo.png"/>
@@ -47,24 +46,8 @@
 			</div>
 			
 			<div id="ballot">
-				<div id="left-ballot">
-					<!--
-					<div class="ballot-image" style='background-image:url(images/default.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="text">
-						<p>this is some poopy question</p>
-					</div>
-					-->
-				</div>
-				<div id="right-ballot">
-					<!--
-					<div class="ballot-image" style='background-image:url(images/default.jpg)'></div>
-					<a href='#'><i class='vote'></i></a>
-					<div class="text">
-						<p>this is some poopy question two</p>
-					</div>
-					-->
-				</div>
+				<div id="left-ballot"></div>
+				<div id="right-ballot"></div>
 			</div>
 			
 			<footer>
@@ -73,10 +56,8 @@
 				</div>
 				<div id="sponsors">
 					<ul class='unstyled'>
-						<li>sponsor</li>
-						<li>sponsor</li>
-						<li>sponsor</li>
-						<li>sponsor</li>
+						<li><a href='#'><img src='images/logos/AIR_vertical_logo.png'/></a></li>
+						<li><a href='#'><img src='images/logos/Localore_BW_Lo_sm.png'/></a></li>
 					</ul>
 				</div>
 				
