submit link works and question number is dynamic

--- a/widget.html
+++ b/widget.html
@@ -38,8 +38,8 @@
 		</header>
 	
 		<div class="main">
-			<div id="tagline">
-				10 questions, 1 will remain
+			<div id="tagline" style='opacity:0'>
+				<span id='questions-count'>10</span> questions, 1 will remain
 			</div>
 			<div class="">
 				<h3>Which would you rather know?</h3>
@@ -52,7 +52,7 @@
 			
 			<footer>
 				<div id="submit-question">
-					<a href='#'>Submit a Question</a>
+					<a href='http://curiouscity.wbez.org/#ask' target='blank'>Submit a Question</a>
 				</div>
 				<div id="sponsors">
 					<ul class='unstyled'>
