--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 					</div>
 					<div class="span7">
 						<ul>
-							<li><a href='#vote'>vote now</a></li>
-							<li><a href='#ask'>ask a<br />question</a></li>
-							<li><a href='#stories'>stories</a></li>
-							<li><a href='#archive'>question<br />archive</a></li>
-							<li><a href='#about'>about</a></li>
+							<li><a href='#!/vote'>vote now</a></li>
+							<li><a href='#!/ask'>ask a<br />question</a></li>
+							<li><a href='#!/stories'>stories</a></li>
+							<li><a href='#!/archive'>question<br />archive</a></li>
+							<li><a href='#!/about'>about</a></li>
 						</ul>
 					</div>
 				</div>
