stories hidden. fixes #13

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<ul>
 							<li><a href='#!/vote'>vote now</a></li>
 							<li><a href='#!/ask'>ask a<br />question</a></li>
-							<li><a href='#!/stories'>stories</a></li>
+							<!--<li><a href='#!/stories'>stories</a></li>-->
 							<li><a href='#!/archive'>question<br />archive</a></li>
 							<li><a href='#!/about'>about</a></li>
 						</ul>
