"tune in" copy moved down. fixes #19

--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
 			<div id="ask-page" class='hide'>
 				<div id='ask-flash'>
 					<div class='row'>
-						<div class="span5">
-							<h5>Tune in Wednesday to The Afternoon Shift on WBEZ 91.5 to find out the final results</h5>
+						<div class="span5 top-left-corner-info">
+							<h5>Tune in Wednesday to <a href='#' target='blank'>The Afternoon Shift</a> on <a href='http://www.wbez.org' target='blank'>WBEZ 91.5</a><br />
+							to find out the final results</h5>
 						</div>
 						<div class="span7 right-col">
 							<div class="super">
