--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 	<div id='wbez-header'>
 		<div class='container'>
-			<div class="logo pull-left"><a href='wbez.org' target='blank'><img src='images/wbez.png' alt='WBEZ91.5' height='20px'/></a></div>
+			<div class="logo pull-left"><a href='http://wbez.org' target='blank'><img src='images/wbez.png' alt='WBEZ91.5' height='20px'/></a></div>
 			<div class="social pull-right">
 				<a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a>
 				<a href='#'><i class='social-facebook social'></i></a>
