--- a/index.html
+++ b/index.html
@@ -284,6 +284,37 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 				<div class="row">
 					<div class="span5">
 						<h2>Investigation Updates</h2>
+						<br><br><br>
+<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'search',
+  search: 'wbez',
+  interval: 30000,
+  title: '',
+  subject: '',
+  width: 'auto',
+  height: 300,
+  theme: {
+    shell: {
+      background: '#ffffff',
+      color: '#ffffff'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#000000',
+      links: '#00ccff'
+    }
+  },
+  features: {
+    scrollbar: false,
+    loop: true,
+    live: true,
+    behavior: 'default'
+  }
+}).render().start();
+</script>
 					</div>
 					<div class="span7">
 						<h2>What are people saying this round</h2>
