--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@ new TWTR.Widget({
 					<div class="span7">
 						<h2>What are people saying this round</h2>
 							<div id='disqus-controls'>
-								<div class="disqus-sort-tab disqus-sort-unselected" id="disqus-sort-popular"><a>Popular</a></div>
-  								<div class="disqus-sort-tab disqus-sort-selected" id="disqus-sort-newest"><a >Most Recent</a></div>
+								<div class="disqus-sort-tab disqus-sort-selected" id="disqus-sort-popular"><a>Popular</a></div>
+  								<div class="disqus-sort-tab disqus-sort-unselected" id="disqus-sort-newest"><a >Most Recent</a></div>
   								<button id="disqus-add-comment" class="btn">Add a comment</button>
   							</div>
 		
