--- a/index.html
+++ b/index.html
@@ -40,18 +40,10 @@
 			<div class="logo pull-left"><a href='http://wbez.org' target='blank'><img src='images/wbez.png' alt='WBEZ91.5' height='20px'/></a></div>
 			<div class="social pull-right">
 				<a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a>
-<span class='st_twitterfollow' displayText='Twitter Follow'></span>
-<span class='st_fblike' displayText='Facebook Like'></span>
-<span class='st_plusone' displayText='Google +1'></span>
-
-				<!--
 				
-				
-				<a href='#'><i class='social-facebook social'></i></a>
-				<a href='#'><i class='social-twitter social'></i></a>
-				<a href='#'><i class='social-rss social'></i></a>
-				<a href='#'><i class='social-googleplus social'></i></a>
-				-->
+				<span class='st_twitterfollow' displayText='Twitter Follow' st_username='WBEZCuriousCity'></span>
+				<span class='st_fblike' displayText='Facebook Like'></span>
+				<span class='st_plusone' displayText='Google +1'></span>
 			</div>
 		</div>
 	</div>
@@ -299,7 +291,7 @@ Plural is a Chicago-based creative studio practice founded in 2008. With a focus
 new TWTR.Widget({
   version: 2,
   type: 'search',
-  search: 'wbez',
+  search: 'WBEZCuriousCity',
   interval: 30000,
   title: '',
   subject: '',
