--- a/widget.html
+++ b/widget.html
@@ -52,7 +52,7 @@
 			
 			<footer>
 				<div id="submit-question">
-					<a href='http://curiouscity.wbez.org/#!/ask' target='blank'>Submit a Question</a>
+					<a href='http://curiouscity.wbez.org/#!/ask' target='blank'>Submit a Question</a> | <a href='http://curiouscity.wbez.org/#!/archive' target='blank'>Browse Questions</a>
 				</div>
 				<div id="sponsors">
 					<ul class='unstyled'>
