various bug fixes

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 			<div class="social pull-right">
 				<a href="mailto:curiouscity@wbez.org"><i class='icon-envelope icon-white'></i> curiouscity@wbez.org</a>
 				
+				<!--<span class='st_plusone' displayText='Google +1'></span>-->
 				<span class='st_twitterfollow' displayText='Twitter Follow' st_username='WBEZCuriousCity'></span>
 				<span class='st_fblike' displayText='Facebook Like'></span>
-				<span class='st_plusone' displayText='Google +1'></span>
+				
 			</div>
 		</div>
 	</div>
