about icon dimensions added for ie

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			<div id="about-page" class='hide'>
 				<div class="row">
 					<div class="span4 left-col">
-						<img src="images/about.png" alt="how? why?" width="100%" height="" border="" align="" />
+						<img src="images/about.png" alt="how? why?" width="300px" height="300px" border="" align="" />
 						<div class="about-sidebar">
 							<p class="">
 								<strong>Curious City</strong> is produced by Jennifer Brandel and brought to you by WBEZ and Localore, a national initiative produced by AIR, the Association of Independents in Radio, Incorporated, and with financial support from the Corporation for Public Broadcasting, the Wyncote Foundation, the John D. and Catherine T. MacArthur Foundation, and the National Endowment for the Arts.
