fix discussion headline bug

--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@ new TWTR.Widget({
 </script>
 					</div>
 					<div class="span7">
-						<h2>What are people saying this round</h2>
-							<div id='disqus-controls'>
+						<h2 id="discussion-headline"></h2>
+							<div id="disqus-controls">
 								<div class="disqus-sort-tab disqus-sort-selected" id="disqus-sort-popular"><a>Popular</a></div>
   								<div class="disqus-sort-tab disqus-sort-unselected" id="disqus-sort-newest"><a >Most Recent</a></div>
   								<button id="disqus-add-comment" class="btn">Add a comment</button>
@@ -328,17 +328,17 @@ new TWTR.Widget({
 		
 		
 			<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'curiouscity'; // required: replace example with your forum shortname
-	var disqus_developer = 1;
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
+				<script type="text/javascript">
+					/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+					var disqus_shortname = 'curiouscity'; // required: replace example with your forum shortname
+					var disqus_developer = 1;
+					/* * * DON'T EDIT BELOW THIS LINE * * */
+					(function() {
+						var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+						dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+						(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+					})();
+				</script>
 					
 					</div>
 				</div>
