--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 				<div id='ask-flash'>
 					<div class='row'>
 						<div class="span5 top-left-corner-info">
-							<h5>Tune in Wednesday to <a href='#' target='blank'>The Afternoon Shift</a> on <a href='http://www.wbez.org' target='blank'>WBEZ 91.5</a><br />
-							to find out the final results</h5>
+							<h5>Tune in Wednesdays to <a href='http://www.wbez.org/programs/afternoon-shift-steve-edwards' target='blank'>The Afternoon Shift</a> on <a href='http://www.wbez.org' target='blank'>WBEZ 91.5</a><br />
+							to hear updates and find out final results.</h5>
 						</div>
 						<div class="span7 right-col">
 							<div class="super">
