--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 						<div class="span5">
 							<br><br><br>
 							<div id='voting-date' class='clearfix'>
-			<a href='#'><i class='arrow left'></i> Voting for May 04 - May 11 / 2012</a>
-		</div> 
+									<a href='#'><i class='arrow left'></i> Voting for May 04 - May 11 / 2012</a>
+							</div> 
 						</div>
 						<div class="span7 right-col">
 							<div class="super">
@@ -150,7 +150,7 @@
 			</div>
 			
 			<div id="archive-page" class='hide'>
-				<div id='ask-flash'>
+				<div id=archive-flash'>
 					<div class='row'>
 						<div class="span5 left-col">&nbsp;</div>
 						<div class="span7 right-col">
