--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						</div>
 						<div class="span7 right-col">
 							<div class="super">
-								<h2>What do you wonder about Chicago,the region, or the people who live here?</h2>
+								<h1>What do you wonder about Chicago, the region, or the people who live here?</h1>
 							</div>
 							<div class="sub">
 								<h5>Please type your question below:</h5>
@@ -185,7 +185,7 @@
 						<img src="images/about.png" alt="how? why?" width="300px" height="300px" border="" align="" />
 						<div class="about-sidebar">
 							<p class="">
-								<strong>Curious City</strong>is produced by Jennifer Brandel and brought to you by WBEZ, Zeega and Localore, a national initiative produced by AIR, the Association of Independents in Radio, Incorporated, and with financial support from the Corporation for Public Broadcasting, the Wyncote Foundation, the John D. and Catherine T. MacArthur Foundation, and the National Endowment for the Arts.
+								<strong>Curious City</strong> is produced by Jennifer Brandel and brought to you by WBEZ, Zeega and Localore, a national initiative produced by AIR, the Association of Independents in Radio, Incorporated, and with financial support from the Corporation for Public Broadcasting, the Wyncote Foundation, the John D. and Catherine T. MacArthur Foundation, and the National Endowment for the Arts.
 							</p>
 							<p>
 								Curious City is part of a national initiative of AIR, the Association of Independents in Radio, Inc designed to bring new journalistic and technical ingenuity to extending public media service to more Americans.  From <a href="http://planettakeout.org/" target="blank"> Chinese restaurants in Boston</a>, to shuttered factories in Dayton, to the <a href="http://blackgoldboom.com/" target="blank">oilfields of North Dakota</a>, to Bay Area startups, the ten Localore production teams are working with their public station incubators to uncover ground-up stories of America in transition. Follow their development and learn more at Localore.net.
@@ -307,6 +307,7 @@ new TWTR.Widget({
 							<div id="disqus-controls">
 								<div class="disqus-sort-tab disqus-sort-selected" id="disqus-sort-popular"><a>Popular</a></div>
   								<div class="disqus-sort-tab disqus-sort-unselected" id="disqus-sort-newest"><a >Most Recent</a></div>
+  								<div class="disqus-guidelines" id="disqus-guidelines"><a >Guidelines</a></div>
   								<button id="disqus-add-comment" class="btn">Add a comment</button>
   							</div>
 		
