--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@ new TWTR.Widget({
 			<div id="sponsor-branding">
 				<ul class="unstyled">
 		
-					<li><a href="#"><div class="logo logo-wyncote" ></div></a></li>
-					<li><a href="#"><div class="logo logo-art-works" ></div></a></li>
-					<li><a href="#"><div class="logo logo-macarthur"></div></a></li>
-					<li><a href="#"><div class="logo logo-cpb" ></div></a></li>
-					<li><a href="#"><div class="logo logo-air"></div></a></li>
-					<li><a href="#"><div class="logo logo-localore"></div></a></li>
+					<li><a href="http://www.wyncotefoundation.org/"><div class="logo logo-wyncote" ></div></a></li>
+					<li><a href="http://www.arts.gov/artworks/"><div class="logo logo-art-works" ></div></a></li>
+					<li><a href="http://www.macfound.org/"><div class="logo logo-macarthur"></div></a></li>
+					<li><a href="http://www.cpb.org/"><div class="logo logo-cpb" ></div></a></li>
+					<li><a href="http://www.airmedia.org/"><div class="logo logo-air"></div></a></li>
+					<li><a href="http://airmediaworks.org/localore"><div class="logo logo-localore"></div></a></li>
 
 				</ul>
 		
