--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@ new TWTR.Widget({
 			<p>To increase the chances of WBEZ picking your question for a vote, make sure it satisfies these requirements:</p>
 			
 			<b>Local Relevance</b>: Questions that in some way relate to Chicago and the region. This includes but is not limited to questions about places or things in the area, local phenomenon or about a person or the people who live here.  <br>
-			<i>Example of an irrelevant question</i>: Why is Missoula, Montana such a popular spot for fishing?
-			<i>Example of a relevant question</i>: Why is Chicago’s Navy Pier such a popular spot for fishing?  <br>
+			<i>Example of an irrelevant question</i>: Why is Missoula, Montana such a popular spot for fishing?<br>
+			<i>Example of a relevant question</i>: Why is Chicago’s Navy Pier such a popular spot for fishing?  <br><br>
 			
-			<b>Impartial</b>: True curiosity requires an open mind and impartiality. Questions that begin with a bias are more likely to result in biased answers.     <br>
-			<i>Example of a biased question</i>:  Why are the CTA’s bus drivers and train operators so bad at their jobs?
-			<i>Example of an impartial question</i>: Why do the CTA’s buses and trains sometimes arrive in clumps even though they can track each other?<br>
+			<b>Impartial</b>: True curiosity requires an open mind and impartiality. Questions that begin with a bias are more likely to result in biased answers.<br>
+			<i>Example of a biased question</i>:  Why are the CTA’s bus drivers and train operators so bad at their jobs?<br>
+			<i>Example of an impartial question</i>: Why do the CTA’s buses and trains sometimes arrive in clumps even though they can track each other?<br><br>
 			
 			<b>Clearly stated</b>: Questions with typos and grammatical errors can be hard to understand. Before you submit, take a minute to read your question aloud to hear if it makes sense. Use spell check if you’re unsure of a spelling.  <br>
-			<i>Example of an unclear question</i>: Why don’t the flores in the city building dwntwn not go to other 1s?
-			<i>Example of a clear question</i>: Why do the same floors in Chicago’s city and county government building not connect to one another?  <br>
+			<i>Example of an unclear question</i>: Why don’t the flores in the city building dwntwn not go to other 1s?<br>
+			<i>Example of a clear question</i>: Why do the same floors in Chicago’s city and county government building not connect to one another?  <br><br>
 
 			<p>We will NOT post or consider answering any questions that:<p>
 			<ul>
