--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Torey Malatia, Daniel Ash, Sally Eisele, Matthew Green, Jane Verwys, Breeze Rich
 										tweets: {
 										  background: '#ffffff',
 										  color: '#000000',
-										  links: '#00ccff'
+										  links: '#08C;'
 										}
 									  },
 									  features: {
