--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 </script>
 
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "c86a7c04-01e6-46c5-9834-e8e1955e312b"}); </script>
+<script type="text/javascript">stLight.options({publisher: "c09036ef-5691-4751-b69d-288d40fa03f7"}); </script>
+
 </head>
 <body>
 	<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -39,12 +40,9 @@
 		<div class="container">
 			<div class="header-logo pull-left"><a href="http://wbez.org" target="blank"><img src="images/wbez.png" alt="WBEZ91.5" height="20px"/></a></div>
 			<div class="social pull-right">
+				<div class="header-icon-social"><span class='st_facebook' displayText='Facebook' '></span></div>
+				<div class="header-icon-social"><span class='st_twitter' displayText='Tweet'></span></div>
 				<a class="header-email-link" href="mailto:curiouscity@wbez.org" target="blank"><i class="icon-envelope icon-white"></i> curiouscity@wbez.org</a>
-				
-				<!--<span class="st_plusone" displayText="Google +1"></span>-->
-				<span class="st_twitterfollow" displayText="Twitter Follow" st_username="WBEZCuriousCity"></span>
-				<span class="st_fblike" displayText="Facebook Like"></span>
-				
 			</div>
 		</div>
 	</div>
